# rust-ffi-example

./: .gitignore  LICENSE  README.md  example.c
testlib/: Cargo.toml
testlib/src/: lib.rs
