[package]
name = "testlib"
version = "0.1.0"
authors = ["Giuseppe Eletto <peppe.eletto@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release] # Optimized for code size (https://github.com/johnthagen/min-sized-rust)
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
